--- a/project-jee8-webapp/pom.xml
+++ b/project-jee8-webapp/pom.xml
@@ -116,6 +116,13 @@
 
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.3</version>
+			<scope>runtime</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -135,7 +142,7 @@
 			<artifactId>artemis-jms-client</artifactId>
 			<version>2.10.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>artemis-server</artifactId>
@@ -159,8 +166,7 @@
 				<version>3.8.1</version>
 				<inherited>true</inherited>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<compilerVersion>14</compilerVersion>
 				</configuration>
 			</plugin>
 		</plugins>
