--- a/project-jee8-webapp/pom.xml
+++ b/project-jee8-webapp/pom.xml
@@ -30,6 +30,11 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.glassfish.jersey.inject</groupId>
@@ -75,7 +80,7 @@
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.7.4</version>
+			<version>2.7.7</version>
 		</dependency>
 
 		<dependency>
@@ -170,6 +175,29 @@
 			<version>2.10.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.weld</groupId>
+			<artifactId>weld-junit5</artifactId>
+			<version>2.0.1.Final</version>
+			<scope>test</scope>
+			<exclusions>
+				
+			</exclusions>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>project-jee8-webapp</finalName>
