--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fr.pantheonsorbonne.ufr27.miage</groupId>
@@ -10,16 +12,16 @@
 	<modules>
 		<module>project-jee8-webapp</module>
 		<module>project-jee8-model</module>
-    <module>project-jee8-rest-client</module>
-    <module>project-jee8-jms-subscriber</module>
-  </modules>
+		<module>project-jee8-rest-client</module>
+		<module>project-jee8-jms-subscriber</module>
+	</modules>
 
 	<dependencyManagement>
 		<dependencies><!-- https://mvnrepository.com/artifact/jakarta.platform/jakarta.jakartaee-bom -->
 			<dependency>
 				<groupId>jakarta.platform</groupId>
 				<artifactId>jakarta.jakartaee-bom</artifactId>
-				<version>8.0.0</version>
+				<version>9.0.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
