--- a/project-jee8-model/pom.xml
+++ b/project-jee8-model/pom.xml
@@ -31,10 +31,11 @@
 			<version>2.3.1</version>
 		</dependency>
 
-
-
-
-
+		 <dependency>
+		  <groupId>javax.annotation</groupId>
+		  <artifactId>javax.annotation-api</artifactId>
+		  <version>1.3.2</version>
+		</dependency>
 
 	</dependencies>
 
@@ -121,10 +122,15 @@
 						</execution>
 					</executions>
 					<configuration>
+						<xsdPathWithinArtifact>xsd</xsdPathWithinArtifact>
+		                <addGeneratedAnnotation>true</addGeneratedAnnotation>
+		                <laxSchemaValidation>true</laxSchemaValidation>
+		                <laxSchemaValidation>true</laxSchemaValidation>
+		                <readOnly>true</readOnly>
+		                <verbose>true</verbose>
 						<packageName>fr.pantheonsorbonne.ufr27.miage.model.jaxb</packageName>
 
 					</configuration>
-
 				</plugin>
 			</plugins>
 		</pluginManagement>
